# rust_space_invaders

./: Cargo.toml
src/: diagnostics.rs  entities.rs  main.rs  shared.rs  system.rs  units.rs  utils.rs
src/entities/: enemy.rs  obstacles.rs  player.rs
src/shared/: attributes.rs  physics.rs  weapons.rs
src/units/: enemy.rs  player.rs  weapons.rs
