[package]
name = "space_invaders_classic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6.1"
rand = "0.8.5"
heron = { version = "2.2.0", features = ["2d", "debug-2d"] }
# heron = { version = "2.2.0", features = ["2d"] }

# Add this to your Cargo.toml
# [profile.dev.package.heron]
# opt-level = 3

# Add this to your Cargo.toml
[profile.release]
codegen-units = 1